---
source: tests/integration/header_generator_tests.rs
expression: "fs::read_to_string(dir.path().join(\"Async.h\").to_str().unwrap()).unwrap()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef ASYNC
#define ASYNC

#include <stdint.h>
#include <math.h>
#include <stdbool.h>
#include <dependencies.plc.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef uint8_t* ASYNC_TaskHandle;

typedef uint8_t* ASYNC_JobHandle;

typedef uint8_t* ASYNC_Function;

typedef enum eASYNC_JobState {
    ASYNC_JobState_Invalid = -1,
    ASYNC_JobState_Pending = 0,
    ASYNC_JobState_Active = 1,
    ASYNC_JobState_Ready = 2,
    ASYNC_JobState_Error = 3,
    ASYNC_JobState_Timeout = 4,
    ASYNC_JobState_Canceled = 5
} ASYNC_JobState;

typedef struct {
    uint64_t* __vtable;
    uint8_t* _Internal_;
} ASYNC_Task_type;

typedef struct {
    char TaskName[15];
    uint32_t TaskPriority;
    uint32_t QueueSize;
} ASYNC_TaskParams;

ASYNC_JobState ASYNC_JobGetState(ASYNC_JobHandle JobHandle, ErrorCode* Error);

bool ASYNC_JobIsCancelable(ASYNC_JobHandle JobHandle, ErrorCode* Error);

ASYNC_TaskHandle ASYNC_TaskCreate(ASYNC_TaskParams TaskParameters, ErrorCode* Error);

void ASYNC_TaskDestroy(ErrorCode* ASYNC_TaskDestroy, ASYNC_TaskHandle TaskHandle);

ASYNC_JobHandle ASYNC_TaskAddJob(ASYNC_TaskHandle TaskHandle, uint8_t* JobFunction, uint8_t* Params, ASYNC_JobState* State, uint32_t Timeout, ErrorCode* Error);

ASYNC_JobHandle ASYNC_TaskAddJobCancelable(ASYNC_TaskHandle TaskHandle, uint8_t* JobFunction, uint8_t* Params, ASYNC_JobState* State, uint32_t Timeout, ErrorCode* Error);

void ASYNC_JobCancel(ErrorCode* ASYNC_JobCancel, ASYNC_JobHandle JobHandle);

ASYNC_TaskHandle ASYNC_GetDefaultTask();

void ASYNC_TaskGetName(char* ASYNC_TaskGetName, ASYNC_TaskHandle TaskHandle);

uint32_t ASYNC_TaskGetPriority(ASYNC_TaskHandle TaskHandle);

void __ASYNC_Task__init(ASYNC_Task_type* self);

void ASYNC_Task(ASYNC_Task_type* self);

void ASYNC_Task__SetAsyncTask(ASYNC_Task_type* self, ASYNC_TaskHandle TaskHandle);

void ASYNC_Task__FB_INIT(ASYNC_Task_type* self);

uint32_t ASYNC_Task____get_Timeout(ASYNC_Task_type* self);

void ASYNC_Task____set_Timeout(ASYNC_Task_type* self, uint32_t Timeout);

#ifdef __cplusplus
}
#endif /* __cplusplus */

#endif /* !ASYNC */
